fix java 9 deprecations